# infinispan-simple-tutorials

c++/events/: .gitignore  CMakeLists.txt
c++/events/java-filter/: pom.xml
c++/events/java-filter/src/main/java/org/infinispan/event/cpp/tutorial/: ToStringEventConverterFactory.java
c++/events/src/: quickstart.cpp
c++/remote-query/src/: bank.proto  main_bank.cpp
operator/: README.md
operator/java-client/: pom.xml
operator/java-client/src/main/java/org/infinispan/: App.java  AppWithProperties.java
operator/java-client/src/main/resources/: hotrod.properties
operator/minikube/: Makefile
operator/openshift/: Makefile
